<resources>
 <string name="app_name">趣送</string>
 <string name="loginAccount">手机号</string>
 <string name="loginPwd">密码</string>
 <string name="loginBtnText">登陆</string>
 <string name="registerBtnText">注册</string>
 <string name="fogetPwd">忘记密码</string>
 <string name="wxLoginText">微信登陆</string>
 <string name="title_activity_main">MainActivity</string>
 <string name="nearby">附近</string>
 <string name="order">订单</string>
 <string name="chat">信息</string>
 <string name="account">我的</string>
 <string name="shoppingbasket">购物车</string>
 <string name="signUpUserName">用户名</string>
 <string name="signUpPhoneNum">手机号</string>
 <string name="signUpPwd">密码</string>
 <string name="signUpBtn">注册</string>
 <string name="signUpValidateBtnText">获取验证码</string>
 <string name="validateNum">验证码</string>
 <string name="accountChangeIndentity">切换到</string>
 <string name="accountSendOrderHistroy">送单记录</string>
 <string name="accountEarnHistroy">收益记录</string>
 <string name="accountOrderHistroy">订单记录</string>
 <string name="accountSendValidate">配送认证</string>
 <string name="accountInfo">账号信息</string>
 <string name="accountChangePwd">密码修改</string>
 <string name="accountExit">账号登出</string>
 <string name="dianCan">点餐</string>
 <string name="introduction">简介</string>
 <string name="xianDan">下单</string>
 <string name="payMoney">付款</string>
 <string name="stop_service_txt">餐厅现在是停业状态,\n不能订餐!</string>
 <string name="into">进入餐厅</string>
 <string name="confirmOrder">信息确认</string>
 <string name="orderName">订单人</string>
 <string name="callPhoneNum">联系电话</string>
 <string name="sendAddress">送单地址</string>
 <string name="wantSendTime">期望送餐时间</string>
 <string name="confirm">确认</string>
 <string name="edit">修改</string>
 <string name="cancle">取消</string>
 <string name="save">保存</string>
 <string name="orderPageName">订单</string>
 <string name="orderNum">订单号</string>
 <string name="evaluation_des">确认订单签收，请对本次服务给予评价，谢谢！</string>
 <string name="hello_world">Hello world!</string>
 <string name="action_settings">Settings</string>
 <string name="title_activity_sign_up">SignUp</string>
 <string name="text_ack_msg">已读</string>
 <string name="text_delivered_msg">送达</string>
 <string name="back">返回</string>
 <string name="button_pushtotalk">按住说话</string>
 <string name="button_send">发送</string>
 <string name="attach_smile">表情</string>
 <string name="attach_picture">图片</string>
 <string name="attach_take_pic">拍照</string>
 <string name="attach_location">位置</string>
 <string name="attach_file">文件</string>
 <string name="attach_voice_call">语音电话</string>
 <string name="attach_video_call">视频通话</string>
 <string name="user_card">名片</string>
 <string name="move_up_to_cancel">手指上滑，取消发送</string>
 <string name="release_to_cancel">松开手指，取消发送</string>
 <string name="send_fail">发送消息失败,</string>
 <string name="delete_message">删除消息</string>
 <string name="delete_conversation_messages">删除会话和消息</string>
 <string name="delete_conversation">删除会话</string>
 <string name="copy_message">复制消息</string>
 <string name="delete_voice">删除语音</string>
 <string name="delete_video">删除视频</string>
 <string name="delete">删除</string>
 <string name="resend">重发</string>
 <string name="confirm_resend">确认重发该信息？</string>
 <string name="connect_failuer_toast">请检查网络或稍候重试</string>
 <string name="network_unavailable">网络连接不可用，请检查网络</string>
 <string name="copy">复制</string>
 <string name="forward">转发</string>
 <string name="button_logout">退出登录</string>
 <string name="button_uploadlog">上传运行日志</string>
 <string name="ok">确定</string>
 <string name="cancel">取消</string>
 <string name="prompt">提示</string>
 <string name="next">下一步</string>
 <string name="clear_records">清空记录</string>
 <string name="clear_all_records">是否清空所有聊天记录？</string>
 <string name="location_recv">[%1$s的位置]</string>
 <string name="location_message">位置信息</string>
 <string name="recording_video">录制视频</string>
 <string name="location_prefix">[我的位置]</string>
 <string name="picture">[图片]</string>
 <string name="video">[视频]</string>
 <string name="file">[文件]</string>
 <string name="voice_call">[语音通话]</string>
 <string name="button_cancel">取消</string>
 <string name="button_save">保存</string>
 <string name="button_search">查找</string>
 <string name="button_add">添加</string>
 <string name="search_header">搜</string>
 <string name="network_isnot_available">网络不可用</string>
 <string name="recoding_fail">录音失败，请重试！</string>
 <string name="select_contacts">选择联系人</string>
 <string name="confirm_forward_to">确定转发到：%1$s ?</string>
 <string name="logout">退出登录</string>
 <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
 <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
 <string name="dissolution_group_hint">退出后，此群将被解散</string>
 <string name="exit_group">退出</string>
 <string name="connect_conflict">同一帐号已在其他设备登录</string>
 <string name="em_user_remove">此用户已被移除</string>
 <string name="set">设置</string>
 <string name="notify">新消息提醒</string>
 <string name="newnotify">接收新消息通知</string>
 <string name="voice">声音</string>
 <string name="shake">震动</string>
 <string name="chatset">聊天设置</string>
 <string name="yangshengqi">使用扬声器播放语音</string>
 <string name="book_black">通讯录黑名单</string>
 <string name="session">会话</string>
 <string name="address_book">通讯录</string>
 <string name="setting">设置</string>
 <string name="now_refresh_list">正在刷新联系人</string>
 <string name="Application_and_notify">申请与通知</string>
 <string name="group_chat">群聊</string>
 <string name="add_friend">添加好友</string>
 <string name="search">搜索</string>
 <string name="black_item">黑名单</string>
 <string name="diagnose">诊断</string>
 <string name="Current_version">当前版本</string>
 <string name="Not_Set">未设置</string>
 <string name="Upload_the_log">上传日志中</string>
 <string name="The_new_group_chat">新建群组</string>
 <string name="group_name">群聊名称</string>
 <string name="Group_chat_profile">群聊简介</string>
 <string name="Whether_the_public">是否公开</string>
 <string name="Open_group_members_invited">开放群成员邀请</string>
 <string name="Open_group_chat">公开的群聊</string>
 <string name="blacklist">黑名单列表</string>
 <string name="Empty_the_chat_record">清空聊天记录</string>
 <string name="Shielding_of_the_message">屏蔽群消息</string>
 <string name="The_dissolution_of_chatting">解散群聊</string>
 <string name="Select_the_contact">选择联系人</string>
 <string name="Group_chat_information">群聊资料</string>
 <string name="Group_of_Lord">群主</string>
 <string name="Introduction">简介</string>
 <string name="To_join_the_chat">加入群聊</string>
 <string name="login">登录</string>
 <string name="user_name">用户名</string>
 <string name="password">密码</string>
 <string name="register">注册</string>
 <string name="confirmpassword">确认密码</string>
 <string name="downwaiting">正在下载文件请稍后</string>
 <string name="mute">静音</string>
 <string name="Hands_free">免提</string>
 <string name="hang_up">挂断</string>
 <string name="answer">接听</string>
 <string name="unable_to_connect">不能连接到服务器</string>
 <string name="newchat">新建聊天</string>
 <string name="agree">同意</string>
 <string name="Group_chat">群聊:</string>
 <string name="not_download">未下载:</string>
 <string name="Please_enter_a_username">请输入用户名</string>
 <string name="is_down_please_wait">正在下载视频请稍候</string>
 <string name="Exit_the_group_chat">退出群聊</string>
 <string name="not_add_myself">不能添加自己</string>
 <string name="This_user_is_already_your_friend">此用户已是你的好友</string>
 <string name="Add_a_friend">加个好友呗</string>
 <string name="send_successful">发送请求成功,等待对方验证</string>
 <string name="Request_add_buddy_failure">请求添加好友失败:</string>
 <string name="Network_error">网络出错</string>
 <string name="Making_sure_your_location">正在确定你的位置...</string>
 <string name="please_check">key 验证出错! 请在 AndroidManifest.xml 文件中检查 key 设置</string>
 <string name="expression">[表情]</string>
 <string name="Removed_from_the_failure">移出失败</string>
 <string name="be_removing">正在移出...</string>
 <string name="call_duration">通话时长</string>
 <string name="Refused">已拒绝</string>
 <string name="The_other_party_has_refused_to">对方已拒绝</string>
 <string name="The_other_is_not_online">对方不在线</string>
 <string name="The_other_is_on_the_phone">对方正在通话中</string>
 <string name="The_other_party_did_not_answer">对方未接听</string>
 <string name="did_not_answer">未接听</string>
 <string name="Has_been_cancelled">已取消</string>
 <string name="unable_to_get_loaction">无法获取到您的位置信息!</string>
 <string name="not_connect_to_server">尚未连接至服务器，请稍后重试</string>
 <string name="sd_card_does_not_exist">SD卡不存在，不能拍照</string>
 <string name="cant_find_pictures">找不到图片</string>
 <string name="File_does_not_exist">文件不存在</string>
 <string name="The_file_is_not_greater_than_10_m">文件不能大于10M</string>
 <string name="Whether_to_empty_all_chats">是否清空所有聊天记录</string>
 <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
 <string name="Recording_without_permission">无录音权限</string>
 <string name="The_recording_time_is_too_short">录音时间太短</string>
 <string name="send_failure_please">发送失败，请检测服务器是否连接</string>
 <string name="Move_into_blacklist_success">移入黑名单成功</string>
 <string name="Move_into_blacklist_failure">移入黑名单失败</string>
 <string name="you_are_group">你被群创建者从此群中移除</string>
 <string name="the_current_group">当前群聊已被群创建者解散</string>
 <string name="Cant_chat_with_yourself">不能和自己聊天</string>
 <string name="deleting">正在删除...</string>
 <string name="Delete_failed">删除失败:</string>
 <string name="Is_moved_into_blacklist">正在移入黑名单...</string>
 <string name="Log_uploaded_successfully">日志上传成功</string>
 <string name="Log_Upload_failed">log上传失败</string>
 <string name="get_failed_please_check">获取失败,请检查网络或稍后再试</string>
 <string name="people">人)</string>
 <string name="being_added">正在添加...</string>
 <string name="is_quit_the_group_chat">正在退出群聊...</string>
 <string name="chatting_is_dissolution">正在解散群聊...</string>
 <string name="are_empty_group_of_news">正在清空群消息...</string>
 <string name="is_modify_the_group_name">正在修改群名称...</string>
 <string name="Modify_the_group_name_successful">修改群名称成功</string>
 <string name="change_the_group_name_failed_please">改变群名称失败，请检查网络或稍后重试</string>
 <string name="Are_moving_to_blacklist">正在移入至黑名单</string>
 <string name="failed_to_move_into">移入黑名单失败,请检查网络或稍后重试</string>
 <string name="Exit_the_group_chat_failure">退出群聊失败:</string>
 <string name="Dissolve_group_chat_tofail">解散群聊失败:</string>
 <string name="Add_group_members_fail">添加群成员失败:</string>
 <string name="Is_unblock">正在解除屏蔽...</string>
 <string name="remove_group_of">解除群屏蔽失败，请检查网络或稍后重试</string>
 <string name="group_is_blocked">正在屏蔽群组...</string>
 <string name="group_of_shielding">群屏蔽失败，请检查网络或稍后重试</string>
 <string name="sure_to_empty_this">确定清空此群的聊天记录吗？</string>
 <string name="The_delete_button_is_clicked">删除按钮被点击</string>
 <string name="Add_a_button_was_clicked">添加按钮被点击</string>
 <string name="not_delete_myself">不能删除自己</string>
 <string name="Are_removed">正在移除...</string>
 <string name="confirm_the_members">确认将此成员加入至此群黑名单?</string>
 <string name="Failed_to_get_group_chat_information">获取群聊信息失败:</string>
 <string name="Is_sending_a_request">正在发送请求...</string>
 <string name="Request_to_join">请求加入</string>
 <string name="send_the_request_is">发送请求成功，等待群主同意</string>
 <string name="Join_the_group_chat">加入群聊成功</string>
 <string name="Failed_to_join_the_group_chat">加入群聊失败:</string>
 <string name="temporary_does_not">暂不支持大于10M的视频！</string>
 <string name="Video_footage">拍摄录像</string>
 <string name="User_name_cannot_be_empty">用户名不能为空！</string>
 <string name="Password_cannot_be_empty">密码不能为空！</string>
 <string name="please_set_the_current">设置当前用户的昵称\n用于ios离线推送时显示用户昵称</string>
 <string name="Is_landing">正在登陆...</string>
 <string name="list_is_for">正在获取好友和群聊列表...</string>
 <string name="login_failure_failed">登录失败: 获取好友或群聊失败</string>
 <string name="Login_failed">登录失败:</string>
 <string name="receive_the_passthrough">收到透传：action：</string>
 <string name="have_you_removed">已把你从他好友列表里移除</string>
 <string name="Less_than_chat_server_connection">连接不到聊天服务器</string>
 <string name="the_current_network">当前网络不可用，请检查网络设置</string>
 <string name="Invite_you_to_join_a_group_chat">邀请你加入了群聊</string>
 <string name="Agreed_to_your_group_chat_application">同意了你的群聊申请</string>
</resources>