<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/widget_margin_32"
    android:paddingRight="@dimen/widget_margin_32"
    android:paddingTop="@dimen/widget_margin_32"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:flatui="http://schemas.android.com/apk/res-auto"
    tools:context="com.uni.unidasher.ui.activity.SignUpActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUpUserName"
        android:textSize="@dimen/text_size_18"
        android:textColor="@color/light_grey"
        />
    <EditText
        android:id="@+id/editUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:gravity="center_vertical"
        android:padding="@dimen/widget_margin_8"
        android:textSize="@dimen/text_size_16"
        android:background="@drawable/login_edittext_bg"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUpPhoneNum"
        android:textSize="@dimen/text_size_18"
        android:textColor="@color/light_grey"
        android:layout_marginTop="@dimen/widget_margin_8"
        />
    <EditText
        android:id="@+id/editPhoneNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:gravity="center_vertical"
        android:padding="@dimen/widget_margin_8"
        android:textSize="@dimen/text_size_16"
        android:background="@drawable/login_edittext_bg"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUpPwd"
        android:textSize="@dimen/text_size_18"
        android:textColor="@color/light_grey"
        android:layout_marginTop="@dimen/widget_margin_8"
        />
    <EditText
        android:id="@+id/editPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:gravity="center_vertical"
        android:padding="@dimen/widget_margin_8"
        android:inputType="textPassword"
        android:textSize="@dimen/text_size_16"
        android:background="@drawable/login_edittext_bg"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/validateNum"
        android:textSize="@dimen/text_size_18"
        android:textColor="@color/light_grey"
        android:layout_marginTop="@dimen/widget_margin_8"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:gravity="center_vertical"

        >
        <EditText
            android:id="@+id/editValidationPwd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:gravity="center_vertical"
            android:padding="@dimen/widget_margin_8"
            android:background="@drawable/login_edittext_bg"
            android:layout_weight="1.7"
            android:textSize="@dimen/text_size_16"
            />
        <TextView
            android:id="@+id/btnValidate"
            style="@style/Widget.Button.Red.Box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/signUpValidateBtnText"
            android:textSize="@dimen/text_size_16"
            android:gravity="center"
            android:layout_weight="1.3"
            android:layout_marginLeft="@dimen/widget_margin_10"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            />
    </LinearLayout>

    <com.cengalabs.flatui.views.FlatButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUpBtn"
        android:textSize="@dimen/text_size_18"
        android:gravity="center"
        android:layout_marginTop="@dimen/widget_margin_16"
        flatui:fl_touchEffect="fl_ripple"
        flatui:fl_blockButtonEffectHeight="0dp"
        flatui:fl_theme="@array/custom_theme_red"
        />
</LinearLayout>
